terraform/main.tf
# Specify the provider and access details
provider "aws" {
  region = "${var.aws_region}"
}

# Create a VPC to launch our instances into
resource "aws_vpc" "vpc-np" {
  cidr_block = "10.0.0.0/16"
}

# Create an internet gateway to give our subnet access to the outside world
resource "aws_internet_gateway" "gw-np" {
  vpc_id = "${aws_vpc.vpc-np.id}"
}

# Grant the VPC internet access on its main route table
resource "aws_route" "rt-np" {
  route_table_id         = "${aws_vpc.vpc-np.main_route_table_id}"
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = "${aws_internet_gateway.gw-np.id}"
}

# Create a subnet to launch our instances into
resource "aws_subnet" "sub-dmz-np" {
  vpc_id                  = "${aws_vpc.vpc-np.id}"
  cidr_block              = "10.0.1.0/24"
  map_public_ip_on_launch = true
}

# A security group for the ELB so it is accessible via the web
resource "aws_security_group" "sg_elb_np" {
  name        = "sg_elb_np"
  description = "Used in the terraform"
  vpc_id      = "${aws_vpc.vpc-np.id}"

  # HTTP access from anywhere
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # outbound internet access
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# Our default security group to access
# the instances over SSH and HTTP
resource "aws_security_group" "sg_web_np" {
  name        = "sg_web_np"
  description = "Used in the terraform"
  vpc_id      = "${aws_vpc.vpc-np.id}"

  # SSH access from anywhere
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # HTTP access from the VPC
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["10.0.0.0/16"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["10.0.0.0/16"]
  }

  # outbound internet access
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}


resource "aws_elb" "elb-web-np" {
  name = "elb-web-np"

  subnets         = ["${aws_subnet.sub-dmz-np.id}"]
  security_groups = ["${aws_security_group.sg_elb_np.id}"]
  instances       = ["${aws_instance.web01_np.id}"]

  listener {
    instance_port     = 80
    instance_protocol = "http"
    lb_port           = 80
    lb_protocol       = "http"
  }

}

resource "aws_instance" "web01_np" {
  connection {
    user = "ubuntu"
    private_key = "${var.private_key_path}"
  }

  instance_type = "t2.micro"
  ami = "${lookup(var.aws_amis, var.aws_region)}"
  key_name   = "${var.key_name}"
  vpc_security_group_ids = ["${aws_security_group.sg_web_np.id}"]
  subnet_id = "${aws_subnet.sub-dmz-np.id}"

  tags {
      Name = "web01_np"
      node_environment = "uat"
  }

  root_block_device {
    volume_type = "gp2"
    volume_size = "20"
  }

  provisioner "file" {
      source = "id_rsa.daniel.pub"
      destination = "/tmp/id_rsa.daniel.pub"
  }

  provisioner "remote-exec" {
    inline = [
      "cat /tmp/id_rsa.daniel.pub >> ~/.ssh/authorized_keys",
      "sudo rm /tmp/id_rsa.daniel.pub"
    ]
  }

  provisioner "file" {
      source = "terraform.sh"
      destination = "/tmp/terraform.sh"
  }

  provisioner "remote-exec" {
    inline = [
      "sudo chmod +x /tmp/terraform.sh",
      "sudo bash -x /tmp/terraform.sh",
      "sudo rm /tmp/terraform.sh"
    ]
  }
}
